testsuite/tests/patsyn/should_fail/T11039.stderr

T11039.hs:8:15: error:
    • Couldn't match type ‘f’ with ‘A’
      Expected: f a
        Actual: A a
      ‘f’ is a rigid type variable bound by
        the signature for pattern synonym ‘Q’
        at T11039.hs:7:1-38
    • In the pattern: A a
      In the declaration for pattern synonym ‘Q’
